@@ -928,7 +928,7 @@ class pdf_sponge extends ModelePDFFactures
 				$invoice->fetch($obj->fk_facture_source);
 
 				$pdf->SetXY($tab3_posx, $tab3_top+$y);
-				$pdf->MultiCell(20, 3, dol_print_date($obj->datef, 'day', false, $outputlangs, true), 0, 'L', 0);
+				$pdf->MultiCell(20, 3, dol_print_date($db->jdate($obj->datef), 'day', false, $outputlangs, true), 0, 'L', 0);
 				$pdf->SetXY($tab3_posx+21, $tab3_top+$y);
 				$pdf->MultiCell(20, 3, price(($conf->multicurrency->enabled && $object->multicurrency_tx != 1) ? $obj->multicurrency_amount_ttc : $obj->amount_ttc, 0, $outputlangs), 0, 'L', 0);
 				$pdf->SetXY($tab3_posx+40, $tab3_top+$y);
@@ -1829,7 +1829,7 @@ class pdf_sponge extends ModelePDFFactures
 	 *  Define Array Column Field
 	 *
 	 *  @param	object			$object    		common object
-	 *  @param	outputlangs		$outputlangs    langs
+	 *  @param	Translate		$outputlangs    langs
      *  @param	int			   $hidedetails		Do not show line details
      *  @param	int			   $hidedesc		Do not show desc
      *  @param	int			   $hideref			Do not show ref
