@@ -479,6 +479,20 @@ if (empty($conf->global->PROJECT_HIDE_TASKS) && ! empty($conf->global->PROJECT_S
 		{
 			$obj = $db->fetch_object($resql);
 
+			$projectstatic->id = $obj->projectid;
+			$projectstatic->ref = $obj->ref;
+			$projectstatic->title = $obj->title;
+			$projectstatic->statut = $obj->status;
+			$projectstatic->public = $obj->public;
+			$projectstatic->dateo = $db->jdate($obj->projdateo);
+			$projectstatic->datee = $db->jdate($obj->projdatee);
+
+			$taskstatic->projectstatus = $obj->projectstatus;
+			$taskstatic->progress = $obj->progress;
+			$taskstatic->fk_statut = $obj->status;
+			$taskstatic->dateo = $db->jdate($obj->dateo);
+			$taskstatic->datee = $db->jdate($obj->datee);
+
 			$username='';
 			if ($obj->userid && $userstatic->id != $obj->userid)	// We have a user and it is not last loaded user
 			{
@@ -490,14 +504,6 @@ if (empty($conf->global->PROJECT_HIDE_TASKS) && ! empty($conf->global->PROJECT_S
 			print '<tr class="oddeven">';
 			//print '<td>'.$username.'</td>';
 			print '<td>';
-			$projectstatic->id=$obj->projectid;
-			$projectstatic->ref=$obj->ref;
-			$projectstatic->title=$obj->title;
-			$projectstatic->statut = $obj->status;
-			$projectstatic->public = $obj->public;
-			$projectstatic->dateo = $db->jdate($obj->projdateo);
-			$projectstatic->datee = $db->jdate($obj->projdatee);
-
 			print $projectstatic->getNomUrl(1, '', 0, '', '<br>');
 			print '</td>';
 			if (! empty($conf->global->PROJECT_USE_OPPORTUNITIES))
@@ -517,14 +523,8 @@ if (empty($conf->global->PROJECT_HIDE_TASKS) && ! empty($conf->global->PROJECT_S
 			}
 			else print $langs->trans("NoTasks");
 			print '</td>';
-			$taskstatic->projectstatus = $obj->projectstatus;
-			$taskstatic->progress = $obj->progress;
-			$taskstatic->fk_statut = $obj->status;
-			$taskstatic->dateo = $db->jdate($obj->dateo);
-			$taskstatic->datee = $db->jdate($obj->datee);
 			print '<td class="center">'.dol_print_date($db->jdate($obj->dateo), 'day').'</td>';
 			print '<td class="center">'.dol_print_date($db->jdate($obj->datee), 'day');
-			print dol_print_date($obj->date_end, 'dayhour');
 			if ($taskstatic->hasDelay()) print img_warning($langs->trans("Late"));
 			print '</td>';
 			print '<td class="right"><a href="'.DOL_URL_ROOT.'/projet/tasks/time.php?id='.$obj->taskid.'&withproject=1">';
